# madshelf

./: .gitignore  AUTHORS  ChangeLog  IniFile.h  Makefile.am  Makefile.in  README  configure  configure.in  en.po  fr.po  madshelf.edj  madshelf.h  madshelf_main.c  messages.pot  ru.po  zh.po
po/: be.po  en.po  es.po  fr.po  pl.po  ru.po  vi.po  zh.po
src/: Choicebox.c  Choicebox.h  Dialogs.c  Dialogs.h  IniFile.c  IniFile.h  Keyhandler.c  Keyhandler.h  Makefile.am  book_meta.h  config.h.in  database.c  database.h  filefilter.c  filefilter.h  filtertree.c  filtertree.h  madshelf.h  madshelf_extractors.c  madshelf_extractors.h  madshelf_main.c  plugin.h  plugins.c  plugins.h  tags.c  tags.h
themes/: madshelf.edj
