AC_INIT(configure.in)

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(madshelf, 0.1)

AC_PROG_CC
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

PKG_CHECK_MODULES(EWL, [ewl >= 0.5.2.042])
PKG_CHECK_MODULES(EET, [eet >= 1.0.1])
PKG_CHECK_MODULES(EXTRACT, [libextractor])

AC_OUTPUT(Makefile src/Makefile themes/Makefile po/Makefile)
